k8s/overlays/eks/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-api
spec:
  template:
    spec:
      containers:
        - name: ads-api
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-mysql
spec:
  template:
    spec:
      containers:
        - name: mysql
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
